fix white space

--- a/source/assets/stylesheets/components/_hero.scss
+++ b/source/assets/stylesheets/components/_hero.scss
@@ -77,7 +77,8 @@ section {
   }
   .body-text {
     p {
-      width: 50%;
+      width: 80%;
+      margin: 1em;
     }
     height: auto;
   }
